--- a/package.json
+++ b/package.json
@@ -22,17 +22,16 @@
   "dependencies": {
     "es6-map": "^0.1.3",
     "hoist-non-react-statics": "^1.0.5",
-    "lodash": "^4.6.1",
-    "object-unfreeze": "^1.0.2"
+    "lodash": "^4.6.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
     "jsdom": "^8.1.0",
     "pragmatist": "^3.0.21",
-    "react": "^15.0.0-rc.1",
-    "react-addons-shallow-compare": "^15.0.0-rc.1",
-    "react-addons-test-utils": "^15.0.0-rc.1",
-    "react-dom": "^15.0.0-rc.1"
+    "react": "^15.1.0",
+    "react-addons-shallow-compare": "^15.1.0",
+    "react-addons-test-utils": "^15.1.0",
+    "react-dom": "^15.1.0"
   },
   "scripts": {
     "pragmatist": "node ./node_modules/.bin/pragmatist --es5",
