--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "eslint": "^2.12.0",
+    "eslint-plugin-babel": "^3.2.0",
+    "eslint-plugin-flow-vars": "^0.4.0",
+    "eslint-plugin-react": "^5.1.1",
     "jsdom": "^8.1.0",
     "pragmatist": "^3.0.21",
     "react": "^15.1.0",
